# rss-news-reader

./: .env.example  .gitignore  README.md  start.ps1
backend/: README.md  pyproject.toml
backend/config/: settings.yaml  sources.yaml
backend/samples/: article_bbc.html  article_bloomberg.html  sample_feed.xml
backend/src/rss_news_reader/: __init__.py  api.py  cli.py  config.py  db.py  logging.py  models.py  pipeline.py  utils.py
backend/src/rss_news_reader/repositories/: articles.py  feed_entries.py  sources.py
backend/src/rss_news_reader/services/: article_fetcher.py  deduper.py  exporter.py  extraction_types.py  extractor.py  rate_limit.py  rss_fetcher.py
backend/src/rss_news_reader/strategies/: css_selector_strategy.py  readability_strategy.py  trafilatura_strategy.py
backend/tests/: conftest.py  test_api.py  test_article_fetcher.py  test_cli.py  test_db.py  test_deduper.py  test_extractor.py  test_rss_fetcher.py
deploy/ubuntu/: DEPLOY.md  backend.env.example  frontend.env.example  rss-news-reader-api.service  rss-news-reader-ingest.service  rss-news-reader-ingest.timer  rss-news-reader-web.service  rss-news-reader.nginx.conf
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/search/: page.tsx
frontend/app/sources/: page.tsx
frontend/components/: ArticleCard.tsx  ArticleMeta.tsx  FontSizeControl.tsx  Header.tsx  RelatedArticles.tsx  SearchBar.tsx  SourceFilter.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  sanitize.ts  types.ts  utils.ts
(+1 files in other folders)
