[project]
name = "rss-news-reader"
version = "0.1.0"
description = "RSS news ingestion, article extraction, local API, and reading frontend backend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.111.0",
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "lxml>=5.2.1",
  "playwright>=1.52.0",
  "pydantic-settings>=2.3.1",
  "pyyaml>=6.0.1",
  "readability-lxml>=0.8.1",
  "sqlmodel>=0.0.18",
  "structlog>=24.1.0",
  "trafilatura>=1.9.0",
  "typer>=0.12.3",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
]

[dependency-groups]
dev = [
  "pytest>=8.2.2",
]

[project.scripts]
news = "rss_news_reader.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rss_news_reader"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
